Remove weird reflection dance java9-modularity/gradle-modules-plugin#172