@@ -50,44 +50,3 @@ check.dependsOn tckTest
 // compileTestJava still compiles from the module path
 addReads(compileTestJava, 'methanol.testutils')
 addReads(compileTestJava, 'org.junit.jupiter.params')
-
-// The TestNG explicit dep causes java modularity plugin to insert '--add-module testng',
-// which only works with older versions of TestNG (TestNG versions >= 7.0.0 have an
-// Automatic-Module-Name of org.testng). So till https://github.com/java9-modularity/gradle-modules-plugin/issues/172
-// is fixed, this dance is made to correct the module name after the plugin inserts it.
-compileTestJava {
-  def mutatorIndex = indexOfArgsMutator(actions, 'org.javamodularity.moduleplugin')
-  if (mutatorIndex < 0) {
-    throw new GradleException("couldn't find org.javamodularity.moduleplugin arguments mutator action for compileTestJava")
-  }
-
-  actions.add(mutatorIndex + 1, {
-    options.compilerArgs = correctTestNGModuleName(options.compilerArgs)
-  } as Action<? super Task>)
-}
-
-def indexOfArgsMutator(actions, packagePrefix) {
-  return actions.findIndexOf {
-    it.class.name == 'org.gradle.api.internal.AbstractTask$TaskActionWrapper' &&
-        it.class.getDeclaredField('action').with { field ->
-          field.accessible = true
-          field.get(it).class.name.startsWith(packagePrefix)
-        }
-  }
-}
-
-// Replaces testng with org.testng in --add-modules and --add-reads
-def correctTestNGModuleName(List<String> args) {
-  def correctedArgs = []
-  for (int i = 0; i < args.size(); i++) {
-    correctedArgs += args[i]
-    if (args[i] == '--add-modules') {
-      def modules = args[++i].split(',').collect { it == 'testng' ? 'org.testng' : it }
-      correctedArgs += modules.join(',')
-    } else if (args[i] == '--add-reads') {
-      def (source, target) = args[++i].split('=').collect { it == 'testng' ? 'org.testng' : it }
-      correctedArgs += "$source=$target";
-    }
-  }
-  return correctedArgs
-}
